# project_py_postgresql_explore

./: pyproject.toml
project_py_postgresql_explore/: etl.py  explore.py  explore2.py  explore3.py  explore4.py  explore5.py  explore_agua_fria.py  explore_cpfs1.py  explore_cpfs2.py  reports.py  transform_cpf.py
