[tool.poetry]
name = "project-py-postgresql-explore"
version = "0.1.0"
description = ""
authors = ["Denis Macedo <deniscmacedo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
psycopg2 = "^2.9.9"
pydrive = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
